--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -5,15 +5,22 @@
   "license": "MIT",
   "dependencies": {
     "@fastify/cors": "^8.2.0",
-    "@types/node": "^18.11.13",
     "fastify": "^4.10.2",
+    "http-errors": "^2.0.0",
     "mongoose": "^6.8.0",
     "nodemon": "^2.0.20",
     "pino-pretty": "^9.1.1",
+    "ramda": "^0.28.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "scripts": {
-    "dev": "nodemon src/server.ts"
+    "dev": "nodemon src/server.ts",
+    "seed": "ts-node src/seed.ts"
+  },
+  "devDependencies": {
+    "@types/http-errors": "^2.0.1",
+    "@types/node": "^18.11.13",
+    "@types/ramda": "^0.28.20"
   }
 }
